--- a/web/assets/css/util.css
+++ b/web/assets/css/util.css
@@ -2,7 +2,8 @@
 
 /*widgets*/
 
-.dummy-submit{
+.dummy-submit,
+.hidden-widget{
     display: none;
 }
 
@@ -19,3 +20,7 @@
     margin-top: 10px;
 }
 
+/*cursors*/
+.clicky{
+	cursor: pointer;
+}
