--- a/web/assets/css/util.css
+++ b/web/assets/css/util.css
@@ -25,7 +25,22 @@
 	color: #6d7fcc;
 }
 
+/*text size*/
+.fs-150{
+	font-size: 150%;
+}
+
 /*cursors*/
+.noselect {
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Old versions of Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+						  supported by Chrome, Opera and Firefox */
+}
+
 .clicky{
 	cursor: pointer;
 }
