--- a/web/system/assets/css/style.css
+++ b/web/system/assets/css/style.css
@@ -2,9 +2,18 @@
 	height: 150px;
 	position: relative;
 	overflow: hidden;
-	-webkit-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.75);
-	box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.75);
+}
+
+.dashboard-item-label{
+	font-size: 124%;
+	padding: 3px;
+	color: #737a9b;
+	margin-left: 10px;
+}
+
+.dashboard-item-detail{
+	font-size: 283%;
+	margin-left: 20px;
 }
 
 .dashboard-footer {
@@ -14,4 +23,14 @@
 	position: absolute;
 	bottom: 0;
 	transform: translate(0px, 24px) skew(0deg, -8deg);
+}
+
+.dashboard-table-margin{
+	margin-top: 25px;
+}
+
+.table-label-header{
+	color: #6d7fcc;
+	font-size: 130%;
+	margin-top: 37px;
 }
