--- a/web/system/assets/css/style.css
+++ b/web/system/assets/css/style.css
@@ -1,7 +1,12 @@
 .dashboard-item{
+	transition: all 0.5s ease;
 	height: 150px;
 	position: relative;
 	overflow: hidden;
+}
+
+.dashboard-anim:hover{
+	transform: translate(0px, -9px);
 }
 
 .dashboard-item-label{
@@ -33,4 +38,17 @@
 	color: #6d7fcc;
 	font-size: 130%;
 	margin-top: 37px;
+}
+
+#user-avatar{
+	width: 350px;
+	height: 350px;
+}
+
+#profileImageInput {
+	width: 350px;
+}
+
+.custom-file-label{
+	overflow: hidden;
 }
